--- a/less/theme.less
+++ b/less/theme.less
@@ -1,5 +1,8 @@
 @import "uikit/uikit.less";
 
+/*Vue instance loading*/
+[v-cloak] { display: none; }
+
 #bix-feature {
   padding-top: @utility-margin;
   padding-bottom: @utility-margin;
